k8s/deployment.yml
# create namespace 
apiVersion: v1
kind: Namespace
metadata:
  name: app-space
---
# create deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: ecr_repo_uri:myapp # 861936062471.dkr.ecr.us-east-1.amazonaws.com/particle41_ecr_repo:myapp
          ports:
            - containerPort: 8080
          # imagePullPolicy: Always
